# InfiniTime

./: .clang-format  .clang-tidy  .devcontainer.json  .dockerignore  .editorconfig  .gitattributes  .gitconfig  .gitignore  .gitmodules  .gitpod.yml  .readthedocs.yaml  .travis.yml  BootloaderVersion.h  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  InfiniTime  Makefile  README.md  README2.md  apps.txt  build.sh  compile.sh  compile_commands.json  docker-build  docker_build.sh  flake.nix  flash_bootloader_app.ocd  flash_graphics.ocd  gcc_nrf52-mcuboot.ld  gcc_nrf52.ld  index.md  log.txt  make_pine.sh  make_pine_mcu.sh  nrf52.svd  openocd-stlink.ocd  package-lock.json  package.json  (+5 more)
cmake-nRF5x/example/: CMakeLists.txt  README.md
cmake-nRF5x/example/src/: CMakeLists.txt
src/: BootErrors.h  BootloaderVersion.cpp  BootloaderVersion.h  BuildTime.cpp.in  BuildTime.h  CMakeLists.txt  CMakeLists.txt.template  Doxyfile  FreeRTOSConfig.h  StaticStack.h  Version.h.in  graphics.cpp  lfs_config.c  lfs_config.h  lfs_util.c  main.cpp  main.h  post_build.sh  recoveryLoader.cpp  rtoshook.c  sdk_config.h  stdlib.c
src/BLE/: BleManager.c  BleManager.h
src/BlinkApp/: BlinkApp.cpp  BlinkApp.h
src/Components/Battery/: BatteryController.cpp  BatteryController.h
src/Components/Ble/: AlertNotificationClient.cpp  AlertNotificationClient.h  AlertNotificationService.cpp  AlertNotificationService.h  BatteryInformationService.cpp  BatteryInformationService.h  BleController.cpp  BleController.h  BleMouse.cpp  BleMouse.h  CurrentTimeClient.cpp  CurrentTimeClient.h  CurrentTimeService.cpp  DeviceInformationService.cpp  DeviceInformationService.h  DfuService.cpp  DfuService.h  HidService.cpp  HidService.h  ImmediateAlertService.cpp  MusicService.cpp  MusicService.h  NimbleController.cpp  NimbleController.h  NotificationManager.cpp  NotificationManager.h  PinetimeService.cpp  PinetimeService.h
src/Components/Brightness/: BrightnessController.cpp  BrightnessController.h
src/Components/DateTime/: DateTimeController.cpp  DateTimeController.h
src/Components/Gfx/: Gfx.cpp  Gfx.h
src/DisplayApp/: Apps.h  DisplayApp.cpp  DisplayApp.h  LittleVgl.cpp  LittleVgl.h  lcdfont.c  lcdfont14.c  lcdfont70.h  lv_port_disp.cpp  lv_port_disp.h
src/DisplayApp/Fonts/: Readme.md  jetbrains_mono_bold_20.c  jetbrains_mono_extrabold_compressed.c  lcdfont14.h  lcdfont70.h
src/DisplayApp/Screens/: ApplicationList.cpp  ApplicationList.h  BatteryIcon.cpp  BatteryIcon.h  BleIcon.cpp  BleIcon.h  Brightness.cpp  Brightness.h  Clock.cpp  Clock.h  DropDownDemo.h  FirmwareUpdate.cpp  FirmwareUpdate.h  FirmwareValidation.cpp  Gauge.cpp  Gauge.h  InfiniPaint.cpp  InfiniPaint.h  Label.cpp  Label.h  Message.cpp  Message.h  Meter.cpp  Meter.h  Modal.cpp  Modal.h  Music.cpp  Music.h  Screen.cpp  Screen.h  ScreenList.cpp  ScreenList.h  Symbols.h  SystemInfo.cpp  Tab.cpp  Tab.h  Tile.cpp  Tile.h
src/FreeRTOS/: heap_4_infinitime.c  port.c  port_cmsis.c  port_cmsis_systick.c  portmacro_cmsis.h
src/Logging/: NrfLogger.cpp  NrfLogger.h
src/SystemTask/: SystemMonitor.h  SystemTask.cpp  SystemTask.h
src/buttonhandler/: ButtonActions.h  ButtonHandler.cpp  ButtonHandler.h  ButtonHandlerTask.cpp  ButtonHandlerTask.h
src/components/Ble/: AlertNotificationService.cpp  BatteryInformationService.cpp  CurrentTimeService.h  ImmediateAlertService.h  MusicService.cpp  NimbleController.cpp  NimbleController.h
src/components/FirmwareValidator/: FirmwareValidator.h
src/components/Gfx/: Gfx.h
src/components/activity/: ActivityController.cpp  ActivityController.h
src/components/alarm/: AlarmController.cpp  AlarmController.h
src/components/alert/: AlertController.cpp  AlertController.h
src/components/battery/: BatteryController.cpp  BatteryController.h
src/components/ble/: ANCSService.cpp  (+57 more)
src/displayapp/: .WeatherHelper.cpp.kate-swp  Apps.h  Apps.h.in  Apps.h.template  AvailableApps.h  CMakeLists.txt  Colors.cpp  Colors.h  Controllers.h  DisplayApp.cpp  DisplayApp.cpp.orig  DisplayApp.cpp.template  DisplayApp.h  DisplayAppRecovery.cpp  DisplayAppRecovery.h  DummyLittleVgl.h  InfiniTimeTheme.cpp  InfiniTimeTheme.h  LittleVgl.cpp  LittleVgl.h  LvglGuard.h  Messages.h  ScreenIds.h  TouchEvents.h  UserApps.h  UserApps.h.in  WatchFaces.h  Weather.cpp  Weather.h  WeatherHelper.cpp  WeatherHelper.h  lv_pinetime_theme.c  lv_pinetime_theme.h
src/drivers/: AccelerationSensor.cpp  AccelerationSensor.h  Bma421.cpp  Bma421.h  BufferProvider.h  Cst816s.cpp  Cst816s.h  Cst816s_registers.h  DebugPins.cpp  DebugPins.h  Display.h  HeartRateSensor.h  Hrs3300.cpp  Hrs3300.h  I2C.cpp  I2C.h  I2CMaster.cpp  I2CMaster.h  InternalFlash.cpp  InternalFlash.h  MotionSensor.h  PinMap.h  SC7A20.cpp  SC7A20.h  SC7A20_registers.h  Spi.cpp  Spi.h  SpiMaster.cpp  SpiMaster.h  SpiNorFlash.cpp  SpiNorFlash.h  St7789.cpp  St7789.h  TouchPanel.h  TwiMaster.cpp  TwiMaster.h  Watchdog.cpp  Watchdog.h  WatchdogView.h  spi_master_fast.cpp  (+3 more)
src/guardian/: BeaconGuard.cpp  BeaconGuard.h
src/heartratetask/: HeartRateTask.cpp  HeartRateTask.cpp.orig  HeartRateTask.h  HeartRateTask.h.orig
src/libs/: .clang-tidy  lfs_config.h  lv_conf.h  lv_extras.h  syscfg.h
src/logging/: DummyLogger.h  Logger.h  NrfLogger.cpp  NrfLogger.h
src/lv_i18n/: lv_i18n.c  lv_i18n.h
src/pawn/: amx.c  amx.h  amxpool.c  amxpool.h  heatshrink_config.h  heatshrink_decoder.h  osdefs.h
src/port/: Display.h  HeartRateSensor.h  MotionSensor.h  Spi.h  SpiMaster.h  SpiNorFlash.h  TouchPanel.h  TwiMaster.h  Watchdog.h  infinitime.h
src/resources/: CMakeLists.txt  apps.json  fonts.json  generate-apps.py  generate-font-bin.py  generate-font-c.py  generate-fonts.py  generate-img.py  generate-package.py  images.json  lv_font_conv.py  lv_img_conv.py  obsolete_files.json  resources.json
src/systemtask/: Messages.h  SystemMonitor.cpp  SystemMonitor.h  SystemTask.cpp  SystemTask.h  WakeLock.cpp  WakeLock.h
src/touchhandler/: TouchHandler.cpp  TouchHandler.h
src/utility/: CircularBuffer.h  DirtyValue.h  LinearApproximation.h  Math.cpp  Math.h  Persistent.h  StaticStack.h  StaticVector.h
(+1324 files in other folders)
